2003-04-12  Brian Warner  <warner@lothar.com>

	* twisted/internet/gtk2reactor.py (Gtk2Reactor.doIteration): don't
	process *all* events before exiting: lots of IO (like test cases which
	do connect()s from inside connectionMade) will keep us from surfacing
	from reactor.iterate(), causing a lockup.
	* twisted/internet/gtkreactor.py (GtkReactor.doIteration): same. Use
	the same code as gtk2reactor with minor gtk1-vs-gtk2 variations.

2003-04-11  Brian Warner  <warner@lothar.com>

	* twisted/internet/gtk2reactor.py (Gtk2Reactor.doIteration): use
	timers to match the behavior of select()-based reactors.
	reactor.iterate(delay) is thus defined to return after 'delay'
	seconds, or earlier if something woke it up (like IO, or timers
	expiring).

2003-04-11  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/internet/defer.py: Added new, experimental function,
	"maybeDeferred".  API is subject to change.

2003-04-11  Jp Calderone  <exarkun@twistedmatrix.com>

	* twisted/scripts/mktap.py: Sped up --debug and --progress by
	introducing a two-pass option parser.

2003-04-11  Brian Warner  <warner@lothar.com>

	* twisted/internet/gtk2reactor.py: major fixes. Use different
	POLLIN/OUT flags to robustly work around pygtk bug, change
	callback() to behave more like pollreactor (since gtk uses poll
	internally). doIteration now calls gtk.main_iteration in a
	non-blocking way. Attempt to emulate doIteration(delay!=0) by
	using time.sleep().

	* twisted/internet/gtkreactor.py: same fixes as for gtk2reactor.
	Instead of a pygtk bug we've got the limited gtk_input_add API,
	which hides POLLHUP/POLLERR, so detecting closed fds might not be
	as reliable.
 
2003-04-11  Andrew Bennetts  <spiv@twistedmatrix.com>

	* twisted/lore:
	Added a "lore-slides" plugin, with HTML, Magicpoint and Prosper output
	targets.  It's still a bit rough, but functional.

2003-04-10  Kevin Turner  <acapnotic@twistedmatrix.com>

	* .: Release 1.0.4alpha2.

2003-04-09  Brian Warner  <warner@lothar.com>
